--- a/style.css
+++ b/style.css
@@ -1,400 +1,295 @@
-* {
+*{
     margin: 0;
     padding: 0;
 }
 
-body {
+html{
+    scroll-behavior: smooth;
+}
+
+body{
+    overflow-x: hidden;
     background-color: black;
     color: white;
-    font-size: 2.4vh;
-    overflow-x: hidden;
-    transition-duration: 0.4s;
-    background-image: linear-gradient(to right, transparent 4vh, rgba(65, 65, 65, 0.4) 1px), linear-gradient(to bottom, transparent 4vh, rgba(65, 65, 65, 0.4) 1px);
-    background-size: calc(4vh + 1px) calc(4vh + 1px);
-    background-attachment: fixed;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-::-webkit-scrollbar {
+::-webkit-scrollbar{
     display: none;
 }
-
-nav {
-    background-color: rgba(149, 149, 149, 0);
-    backdrop-filter: blur(10px);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.025);
-    height: calc(5vh + 20px);
-    transition-duration: 0.2s;
-    position: sticky;
-    top: 0;
-    overflow-x: hidden;
-}
-
-.logo {
-    height: 5vh;
-    width: 6vh;
-    margin: 10px;
-    z-index: 50;
-}
-
-#hide {
-    display: none;
-    z-index: 20;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-}
-
-#show {
-    z-index: 1;
-}
-
-.hamburger {
-    height: 5vh;
-    width: 5vh;
-    float: right;
-    margin: 15px;
-    background-color: rgba(240, 248, 255, 0);
-    border: none;
-}
-
-.l {
-    width: 4vh;
-    height: 1px;
-    background-color: white;
-    margin-top: 1.2vh;
-    transform-origin: 2% 0%;
-    transition-duration: 0.2s;
-}
-
-#l1 {
-    margin-top: -1vh;
-}
-
-.tab_link {
+a{
+    color: white;
     text-decoration: none;
-    color: white;
-    display: inline;
-    text-wrap: nowrap;
 }
-
-.tabs {
-    margin-left: 150vw;
-    transition-duration: 0.2s;
-    transform: translate(-100%);
-    list-style: none;
-    overflow-x: hidden;
-    width: fit-content;
-    text-align: center;
-    position: fixed;
-}
-
-.tabs li {
-    margin-top: 6vh;
-}
-
-.cover {
-    right: 0;
-    height: 100vh;
-    width: 0vw;
-    background-color: rgba(149, 149, 149, 0.138);
+#navbar{
+    width: 100vw;
+    height: 60px;
+    position:fixed;
+    top:0px;
+    z-index: 100;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.121);
     backdrop-filter: blur(7px);
-    position: fixed;
-    top: 0;
-    transition: 0.2s;
-    z-index: -10;
-    overflow: hidden;
+    background-color: rgba(53, 53, 53,0.77);
 }
-
-.theme {
-    height: 5vh;
-    width: 5vh;
+.logo{
+    height: 40px;
+    margin: 10px;
+}
+#burger{
     background-color: rgba(240, 248, 255, 0);
     border: none;
-    bottom: calc(0vh + 60px);
-    z-index: 10;
-    transition-duration: 0.2s;
-    opacity: 1;
-}
-
-.sun {
-    height: 2.6vh;
-    width: 2.6vh;
-    border-radius: 50%;
-    border: 1px solid rgb(255, 255, 255);
-    transition-duration: 0.7s;
-}
-
-.glow {
-    height: fit-content;
-    width: fit-content;
-    padding: 0px;
-    border: 0px solid rgba(255, 255, 255, 0);
-    border-radius: 50%;
-    transition-duration: 0.7s;
-    box-shadow: 0px 0px 10px white;
-}
-
-#top {
     position: fixed;
-    background-color: rgba(149, 149, 149, 0.138);
-    border: 1px solid rgba(255, 255, 255, 0.025);
-    color: white;
-    right: 20px;
-    bottom: 20px;
-    font-size: 3.5vh;
-    padding: 5px;
-    border-radius: 1px;
-    opacity: 0;
-    transition-duration: 0.4s;
-    backdrop-filter: blur(10px);
+    top:10px;
+    right: 10px;
+    height: 40px;
+    width: 40px;
 }
-
-
-#github {
-    height: 3.5vh;
-    width: 3.5vh;
-    filter: invert(1);
-    margin-top: 15px;
-    margin-left: -3px;
+.line{
+    height: 2px;
+    width: 35px;
+    background-color: rgba(255, 255, 255, 0.821);
+    margin-top: 10px;
 }
-
-#buttons {
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    left: -30px;
-    top: calc(70vh + 80px);
-    z-index: 10;
-    transition-duration: 0.2s;
-    opacity: 1;
+#l1{
+    margin-top: 5px;
 }
-
-
-
-.fixed {
-    top: 10vh;
-    transition-duration: 1s;
-    z-index: -10;
-    position: fixed;
+.preview{
+    margin-left: 10%;
+    width: 45vw;
+    border-radius: 7px;
+    box-shadow: 5px 5px 10px rgb(54, 54, 54);
+    transition-duration: 0.3s;
 }
-
-.title {
-    font-size: 90px;
-    top: 10vh;
-    margin-left: 3vw;
-    color: #ffffffe7;
-    width: 40vw;
+.preview:hover{
+    box-shadow: 5px 5px 0px rgba(54, 54, 54, 0);
+}
+.down{
+    transform: translateY(-40%) translateX(-10%);
+}
+.heading{
+    font-size:xx-large;
+    margin: 20px;
+}
+.subheading{
+    font-size: x-large;
+    margin: 20px;
+}
+.text{
+    width: 35vw;
     word-wrap: break-word;
-    font-weight: 400;
-    margin-bottom: 100px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    margin: 20px;
+    font-size: larger;
 }
-
-.statistics {
+#about{
+    width: 90vw;
     display: flex;
-    margin-top: -50px;
-}
-
-.stats {
-    font-size: 40px;
-    border-left: 1px solid white;
-    padding-left: 50px;
-    padding-right: 60px;
-    height: 5rem;
-}
-
-#users {
-    padding-left: 20px;
-    margin-left: 4.5vw;
-    border-left: none;
-}
-
-.names {
-    display: flex;
-    margin-left: 20px;
-}
-
-.small {
-    margin-left: 65px;
-    margin-top: -2rem;
-}
-
-.login {
-    margin-top: 30px;
     margin-left: 5vw;
-    padding: 15px 20px 15px 20px;
-    background-color: #00000000;
-    color: white;
-    border: 1px solid white;
-    transition-duration: 0.4s;
+    padding: 20px;
+    padding-top: 100px;
+}
+#finance{
+    width: 90vw;
+    display: flex;
+    margin-left: 5vw;
+    margin-top: -2px;
+    padding: 20px;
+    padding-right: 0;
+}
+#develop{
+    width: 90vw;
+    display: flex;
+    margin-left: 5vw;
+    padding: 20px;
 }
 
-.login:hover {
+.tags{
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.323);
+    padding: 0px;
+    display: flex;
+    width: 35vw;
+    margin: 20px;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.tags p{
+    margin: 10px;
+}
+
+#htmltag {
+    background: linear-gradient(to right, #E44D26, #f1d329);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+}
+
+#csstag {
+    background: linear-gradient(to right, #264de4, rgb(0, 195, 255));
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+#jstag {
+    background: linear-gradient(to right, #f0db4f, #5e8d00);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+#pythontag {
+    background: linear-gradient(to right, rgb(0, 149, 255), yellow);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+#mysqltag {
+    background: linear-gradient(to right, teal, orange);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+#numpytag {
+    background: linear-gradient(to right, rgb(77, 171, 207), rgb(77, 119, 207));
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+#pandastag {
+    background: linear-gradient(to right, #150458, #FFCA00, #E70488);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+#matplotlibtag {
+    background: linear-gradient(to right, #0b4a72,
+            #71dbc4, #a3f5a0, #ffd95c, #fe9f5d, #dfff73, #728bc5);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+#github{
+    height: 25px;
+    filter: invert(1);
+    transition-duration: 0.3s;
+}
+#contribute{
+    margin-left: 50%;
+    transform: translate(-50%);
+    display: flex;
+    background-color: #00000000;
+    border: 1px solid white;
+    color: white;
+    font-size: large;
+    transition-duration: 0.3s;
+    padding: 10px 20px 10px 20px;
+}
+#contribute:hover{
     background-color: white;
     color: black;
 }
-
-#create {
-    margin-left: 1vw;
+#contribute:hover #github{
+    filter: invert(0);
 }
-
-footer {
+#contribute p{
+    margin-right: 10px;
+    margin-top: 5px;
+}
+footer{
+    display: flex;
+    flex-direction: row;
+    padding-left: 10vw;
+    padding-right: 10vw;
+}
+form{
+    background-color: #4c4c4c48;
+    backdrop-filter: blur(7px);
+    width: 40vw;
+    padding: 20px;
     text-align: center;
-    margin: 40px;
-    margin-top: 150vh;
-    font-size: 0.8rem;
-    position: relative;
+    border-radius: 5px;
 }
-
-.block {
-    height: 10px;
-    width: 10px;
-    border-radius: 2px;
-    background-color: yellow;
-    box-shadow: 0px 0px 20px yellow, 0px 0px 20px orange;
-    margin-left: 3vw;
+input{
+    width: 100%;
+    height: 30px;
+    margin-top: 20px;
+    border: none;
+    border-radius: 5px;
+}
+#send{
+    margin-left: 80%;
+    width: 20%;
+}
+.cubes{
+    height: 80vh;
     position: absolute;
-    animation-name: blink;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-    z-index: -8;
+    right: -200px;
+    margin-top: -180px;
 }
-
-#b1 {
-    top: 89vh;
+.contact{
+    width: 40vw;
 }
-
-#b2 {
-    top: calc(142vh - 5px);
+.end-logo{
+    height: 40px;
+    margin-top: 13px;
 }
-
-#b3 {
-    top: calc(142vh - 5px);
-    left: 27vw;
+.name{
+    display: flex;
 }
-
-@keyframes blink {
-    0% {
-        box-shadow: none;
-    }
-
-    50% {
-        box-shadow: 0px 0px 20px yellow, 0px 0px 20px orange;
-    }
-
-    100% {
-        box-shadow: none;
-    }
+hr{
+    width: 70vw;
+    margin-left: 15vw;
+    margin-bottom: 20px;
 }
-
-.connect {
-    width: 1px;
-    position: absolute;
-    margin-left: calc(3vw + 5px);
-    background-color: goldenrod;
-    z-index: -10;
-    transition-duration: 1s;
-}
-
-#c1 {
-    top: 89vh;
-    height: 0vh;
-}
-
-#c2 {
-    top: 142vh;
-    height: 1px;
-    width: 0vw;
-}
-
-.info {
-    width: 25vw;
-    margin-left: 5vw;
-    word-wrap: break-word;
-    font-size: 1.3rem;
-    margin-top: 84vh;
-    position: absolute;
-    transition-duration: 1s;
-    opacity: 0;
-    z-index: -10;
-}
-
-h1 {
+.links{
+    font-weight: 100;
+    background-color: #191919;
+    height: 120px;
+    margin-top: 50px;
     text-align: center;
+    padding-top: 20px;
 }
-
-.square {
-    transition-delay: 0.2s;
-    transition-duration: 1s;
-    position: absolute;
-    background-color: #ffffff00;
-    height: 350px;
-    width: 350px;
-    border: 1px solid cyan;
-    margin-top: 5%;
-    margin-left: 70%;
-    transform: translate(-50%) rotate(45deg);
-    position: fixed;
-    top: 16vh;
-    z-index: -10;
-    animation-name: rotate;
-    animation-duration: 25s;
-    animation-iteration-count: infinite;
+.links a{
+    color:rgba(255, 255, 255, 0.433);
 }
-
-@keyframes rotate {
-    0% {
-        transform: scale(1) translate(-50%) rotate(45deg);
+/*===========================RESPONSIVE===================================*/
+@media screen and (max-width: 660px) {
+    #about{
+        width: 80vw;
+        flex-direction: column-reverse;
     }
-
-    33% {
-        transform: scale(0.7) translate(-50%) rotate(120deg);
+    #finance{
+        margin-left: 0vw;
+        flex-direction: column;
     }
-
-    66% {
-        transform: scale(0.9) translate(-50%) rotate(280deg);
+    #develop{
+        width: 80vw;
+        flex-direction: column-reverse;
     }
-
-    100% {
-        transform: scale(1) translate(-50%) rotate(45deg);
+    .preview{
+        width: 75vw;
     }
-}
-
-@media(max-width:900px) {
-    .fixed {
-        position: fixed;
-        margin-top: -10vh;
+    .text{
+        width: 80vw;
     }
-    .title {
-        position: relative;
-        width: 97vw;
-        font-size: 60px;
-        word-wrap: break-word;
+    .tags{
+        width: 80vw;
     }
-
-    .stats {
-        margin-top: 30px;
-        font-size: 30px;
+    .cubes{
+        width: 120vw;
+        height: 120vw;
+        left:-170px;
     }
-
-    .small {
-        margin-left: 35px;
+    footer{
+        margin-top: 50px;
+        flex-direction: column-reverse;
     }
-
-    .login {
-        margin-top: 20px;
+    form{
+        width: calc(80vw - 30px);
     }
-
-    .info {
-        width: 90vw;
-        padding-left: 10px;
-        font-size: 1.2rem;
-        margin-top: 82vh;
+    .subheading{
+        font-size: large;
     }
-    .square{
-        height: 300px;
-        width: 300px;
-        top:70vh;
+    .end-logo{
+        height: 30px;
+        margin-left: 20px;
     }
 }
