--- a/style.css
+++ b/style.css
@@ -41,17 +41,6 @@ a {
     height: 40px;
     margin: 10px;
 }
-#top_name{
-    position: absolute;
-    margin-top:-45px;
-    left:40px;
-    opacity: 0;
-    transition-duration: 0.3s;
-}
-
-#top_name:hover{
-    opacity: 1;
-}
 
 .burger {
     background-color: rgba(240, 248, 255, 0);
@@ -438,6 +427,10 @@ input {
     #charts p{
         margin-bottom: 20px;
         width: calc(100% - 20px);
+    }
+
+    .examples img{
+        height: 25vh;
     }
 
     .preview {
