--- a/style.css
+++ b/style.css
@@ -411,7 +411,8 @@ input {
 #send {
     margin-left: 80%;
     width: 20%;
-    background-color: rgba(255, 255, 255, 0.492);
+    background-color: rgba(0, 123, 121, 0.507);
+    cursor: pointer;
 }
 
 .cubes {
