--- a/style.css
+++ b/style.css
@@ -411,8 +411,16 @@ input {
 #send {
     margin-left: 80%;
     width: 20%;
-    background-color: rgba(0, 123, 121, 0.507);
+    background-color: rgba(0, 123, 121, 0.364);
     cursor: pointer;
+    color:rgba(255, 255, 255, 0.63);
+    transition-duration: 0.3s;
+}
+
+#send:hover{
+    color: black;
+    background-color: rgba(0, 240, 236, 0.867);
+    box-shadow: 0px 0px 10px cyan;
 }
 
 .cubes {
@@ -578,6 +586,7 @@ input {
         width: 75vw;
     }
     #contribute{
+        margin-top: 20px;
         transform: translate(-55%);
     }
 
