--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ a {
     color: white;
     text-decoration: none;
 }
-
 .buttons{
     display: flex;
     flex-direction: column;
@@ -214,14 +213,87 @@ a {
     margin-top: 40px;
     font-size: x-large;
 }
+.top_dataverse{
+    margin-left: 55vw;
+    display: flex;
+}
+
+#data {
+    background: linear-gradient(to right, goldenrod, rgb(0, 141, 141));
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation-name: hue;
+    animation-duration: 4s;
+    animation-timing-function: linear;
+}
+
+@keyframes hue{
+    0%{
+        filter: hue-rotate(0deg);
+    }
+    100%{
+        filter: hue-rotate(360deg);
+    }
+}
+
 #download{
     padding-top:90px;
     height: calc(100vh - 290px);
 }
-#download p{
-    margin-left: 30px;
-    font-size: xx-large;
+.top_dataverse p{
+    font-size: xxx-large;
 }
+#intro_text{
+    font-size: large;
+    margin-left: 55vw;
+    width: 40vw;
+    word-wrap: break-word;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+#download_btn {
+    margin-left: 55vw;
+    background-color: #00000000;
+    border: 1px solid white;
+    color: white;
+    font-size: large;
+    transition-duration: 0.3s;
+    padding: 10px 20px 10px 20px;
+}
+
+#download_btn:hover {
+    background-color: white;
+    color: black;
+}
+.scroll_icon{
+    position: fixed;
+    bottom: 50px;
+    left:50vw;
+    transform: translate(-50%);
+    font-size: x-small;
+    transition-duration: 0.3s;
+}
+
+.shadow{
+    height: 20px;
+    width: 180px;
+    background-image: linear-gradient(115deg, #00000000,#000000d4,#00000000);
+    position: absolute;
+    margin-top: -20px;
+    animation-name: wave;
+    animation-duration: 2s;
+    animation-iteration-count:infinite;
+    animation-timing-function: ease-in-out;
+}
+@keyframes wave{
+    0%{
+        margin-left: -180px;
+    }
+    100%{
+        margin-left: 7rem;
+    }
+}
+
 #about {
     padding-top: 200px;
     display: flex;
@@ -337,7 +409,6 @@ a {
     background: linear-gradient(to right, #E44D26, #f1d329);
     background-clip: text;
     -webkit-text-fill-color: transparent;
-
 }
 
 #csstag {
@@ -535,6 +606,20 @@ input {
 
 /*===========================RESPONSIVE===================================*/
 @media screen and (max-width: 660px) {
+    .top_dataverse{
+        margin-left: 60px;
+    }
+    .top_dataverse p{
+        font-size: xx-large;
+    }
+    #intro_text{
+        font-size: medium;
+        width: calc(90vw - 60px);
+        margin-left: 60px;
+    }
+    #download_btn {
+        margin-left: 60px;
+    }
     #about {
         margin-top: 0;
         flex-direction: column-reverse;
@@ -641,7 +726,7 @@ input {
     top: 59.8px;
     height: 1.9px;
     box-shadow: 0px 0px 5px goldenrod;
-    width: 50vw;
+    width: 0vw;
     background: rgb(218, 165, 32);
     transition: width 200ms linear;
   }
